# medico-mv

./: Caddyfile  README.md  STRUCTURE.md
ai-chat-app/: .env.example  .gitignore  README.md  chat.db  main.py  pyproject.toml
ai-chat-app/app/models/: __init__.py  chat.py  database.py  user.py
ai-chat-app/app/routes/: __init__.py  auth.py  chat.py  documents.py  tools.py  websocket.py
ai-chat-app/app/services/: __init__.py  auth.py  llm.py  rag_client.py  tools.py
ai-chat-app/templates/: index.html
rag-service/: .env  .env.example  chunker.py  cli.py  embedder.py  main.py  models.py  parsers.py  pyproject.toml  vector_store.py
